# libs/shared-types/src/user/update-staff.request.ts
@@ -1,0 +1,9 @@
+import { createZodDto } from "nestjs-zod";
+import { CreateStaffSchema } from "./create-staff.request";
+
+export const UpdateStaffSchema = CreateStaffSchema.partial().omit({
+  cinemaId: true,
+  email: true,
+});
+
+export class UpdateStaffRequest extends createZodDto(UpdateStaffSchema) {}
